@@ -16794,21 +16794,6 @@ failed to do read-ahead over network mounts for memory mapped files.</td></tr></
 ALT=">" BORDER=0 height=14
 width=15><b><font face="Helvetica, Arial"
 ><font color="#00B04F"><font size="+1">
-    MAGICK_MMAP_WRITE
-</font></font></font></b></td></tr></table>
-<table width="90%" border="0" cellspacing="0"              cellpadding="8">              <tr><td width="6%"><br></td><td>If <strong>MAGICK_MMAP_WRITE</strong> is set to <strong>TRUE</strong>, GraphicsMagick
-will attempt to memory-map the output file for writing. This is an
-experimental feature (which is currently broken). Write performance is
-usually somewhat worse when using this approach rather than the default
-one.</td></tr></table>
-<table BORDER=0 WIDTH="94%">
-<tr>
-<td width="3%"><br></td> 
-<td ALIGN=LEFT BGCOLOR="#FFFFFF">
-<img SRC="images/right_triangle_option.png"
-ALT=">" BORDER=0 height=14
-width=15><b><font face="Helvetica, Arial"
-><font color="#00B04F"><font size="+1">
     MAGICK_IO_FSYNC
 </font></font></font></b></td></tr></table>
 <table width="90%" border="0" cellspacing="0"              cellpadding="8">              <tr><td width="6%"><br></td><td>If <strong>MAGICK_IO_FSYNC</strong> is set to <strong>TRUE</strong>, then GraphicsMagick
