@@ -1,3 +1,9 @@
+2012-12-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* magick/blob.c: Eliminate support for experimental
+	MAGICK_MMAP_WRITE, which never quite worked correctly and did not
+	provide performance benefits.
+
 2012-12-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* magick/blob.c (FileToBlob): Rewrite to be based on stdio.
